--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
         "container:deploy": "docker push ghcr.io/proto-cool/payload-cms:latest && docker push ghcr.io/proto-cool/payload-cms:$npm_package_version"
     },
     "dependencies": {
-        "@payloadcms/db-postgres": "3.12.0",
-        "@payloadcms/next": "3.12.0",
-        "@payloadcms/payload-cloud": "3.12.0",
-        "@payloadcms/richtext-lexical": "3.12.0",
-        "@payloadcms/ui": "3.12.0",
+        "@payloadcms/db-postgres": "^3.14.0",
+        "@payloadcms/next": "^3.14.0",
+        "@payloadcms/payload-cloud": "^3.14.0",
+        "@payloadcms/richtext-lexical": "^3.14.0",
+        "@payloadcms/ui": "^3.14.0",
+        "payload": "^3.14.0",
         "cross-env": "^7.0.3",
         "graphql": "^16.10.0",
         "lexical": "0.20.0",
-        "next": "15.1.0",
-        "payload": "3.12.0",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
+        "next": "^15.1.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "reading-time": "^1.5.0",
-        "sharp": "0.32.6"
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
@@ -48,7 +48,8 @@
         "globals": "^15.14.0",
         "prettier": "^3.4.2",
         "typescript": "5.7.2",
-        "typescript-eslint": "^8.19.0"
+        "typescript-eslint": "^8.19.0",
+        "husky": "^9.1.7"
     },
     "engines": {
         "node": "^18.20.2 || >=20.9.0"
