--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "reading-time": "^1.5.0",
-        "sharp": "^0.33.5"
+        "sharp": "^0.33.5",
+        "axios": "^1.7.9"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
