--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
         "prettier": "^3.4.2",
         "typescript": "5.7.2",
         "typescript-eslint": "^8.19.0",
-        "husky": "^9.1.7"
+        "husky": "^9.1.7",
+        "path-to-regexp": "^6.3.0"
     },
     "engines": {
         "node": "^18.20.2 || >=20.9.0"
