--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "proto.cool-payload-cms",
-    "version": "1.2.1",
-    "description": "A blank template to get started with Payload 3.0",
+    "version": "1.3.0",
+    "description": "A blog site template to get started with Payload 3.0",
     "license": "MIT",
     "type": "module",
     "scripts": {
