--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "proto.cool-payload-cms",
-    "version": "1.5.1",
+    "version": "1.5.2",
     "description": "A blog site template to get started with Payload 3.0",
     "license": "MIT",
     "type": "module",
@@ -19,38 +19,38 @@
         "container:deploy": "docker push ghcr.io/proto-cool/payload-cms:latest && docker push ghcr.io/proto-cool/payload-cms:$npm_package_version"
     },
     "dependencies": {
-        "@payloadcms/db-postgres": "^3.19.0",
-        "@payloadcms/next": "^3.19.0",
-        "@payloadcms/payload-cloud": "^3.19.0",
-        "@payloadcms/richtext-lexical": "^3.19.0",
-        "@payloadcms/ui": "^3.19.0",
-        "payload": "^3.19.0",
+        "@payloadcms/db-postgres": "^3.20.0",
+        "@payloadcms/next": "^3.20.0",
+        "@payloadcms/payload-cloud": "^3.20.0",
+        "@payloadcms/richtext-lexical": "^3.20.0",
+        "@payloadcms/ui": "^3.20.0",
+        "axios": "^1.7.9",
         "cross-env": "^7.0.3",
         "graphql": "^16.10.0",
         "lexical": "0.21.0",
         "next": "^15.1.6",
+        "payload": "^3.20.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "reading-time": "^1.5.0",
-        "sharp": "^0.33.5",
-        "axios": "^1.7.9"
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.17.0",
-        "@types/node": "^22.10.3",
-        "@types/react": "19.0.1",
-        "@types/react-dom": "19.0.1",
-        "eslint": "^9.17.0",
-        "eslint-config-next": "15.1.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-react": "^7.37.3",
+        "@eslint/js": "^9.19.0",
+        "@types/node": "^22.13.0",
+        "@types/react": "19.0.8",
+        "@types/react-dom": "19.0.3",
+        "eslint": "^9.19.0",
+        "eslint-config-next": "15.1.6",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-react": "^7.37.4",
         "globals": "^15.14.0",
+        "husky": "^9.1.7",
         "prettier": "^3.4.2",
-        "typescript": "5.7.2",
-        "typescript-eslint": "^8.19.0",
-        "husky": "^9.1.7"
+        "typescript": "5.7.3",
+        "typescript-eslint": "^8.22.0"
     },
     "engines": {
         "node": "^18.20.2 || >=20.9.0"
